force-app/main/default/objects/Plan_de_Cobro__c/Plan_de_Cobro__c.object-meta.xml
<CustomObject>
    <description>Plan de cobro asociado a una oportunidad. Contiene informacion de modalidad de pago, montos, fechas y estatus.</description>
    <label>Plan de Cobro</label>
    <nameField>
        <displayFormat>PAG-{0000}</displayFormat>
        <label>Nombre de Pago</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planes de Cobro</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>