force-app/main/default/objects/Plan_de_Cobro__c/fields/Estatus_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Estatus_de_Pago__c</fullName>
    <label>Estatus de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pagado</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>