force-app/main/default/objects/Plan_de_Cobro__c/fields/Fecha_de_Fin__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Fin__c</fullName>
    <label>Fecha de Fin</label>
    <type>Date</type>
</CustomField>