force-app/main/default/objects/Plan_de_Cobro__c/fields/Fecha_de_InFecha_de_Inicioicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_InFecha_de_Inicioicio__c</fullName>
    <label>Fecha de Inicio</label>
    <type>Date</type>
</CustomField>