force-app/main/default/objects/Plan_de_Cobro__c/fields/Metodo_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Metodo_de_Pago__c</fullName>
    <label>Metodo de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Efectivo</fullName>
            </value>
            <value>
                <fullName>Transferencia</fullName>
            </value>
            <value>
                <fullName>Tarjeta de credito</fullName>
            </value>
            <value>
                <fullName>Tarjeta de debito</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Domiciliacion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>