force-app/main/default/objects/Plan_de_Cobro__c/fields/Monto_por_Pago__c.field-meta.xml
<CustomField>
    <fullName>Monto_por_Pago__c</fullName>
    <label>Monto por Pago</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>