force-app/main/default/objects/Plan_de_Cobro__c/fields/Monto_TotalMonto_Total__c.field-meta.xml
<CustomField>
    <fullName>Monto_TotalMonto_Total__c</fullName>
    <label>Monto Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>