force-app/main/default/objects/Plan_de_Cobro__c/fields/Numero_de_Pagos__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Pagos__c</fullName>
    <label>Numero de Pagos</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>