force-app/main/default/objects/Plan_de_Cobro__c/fields/OportunidadOportunidad__c.field-meta.xml
<CustomField>
    <fullName>OportunidadOportunidad__c</fullName>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Planes de Cobro</relationshipLabel>
    <relationshipName>Planes_de_Cobro</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>