force-app/main/default/objects/Plan_de_Cobro__c/fields/Saldo_Pendiente__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Pendiente__c</fullName>
    <formula>Monto_TotalMonto_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo Pendiente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>